--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -4,6 +4,18 @@
 @charset "utf-8";
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic);
 
+@font-face {
+    font-family: 'Great Vibes';
+    src: url('../../frontend/font/GreatVibes-Regular.eot'); /* IE9 Compat Modes */
+    src: url('../../frontend/font/GreatVibes-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../../frontend/font/GreatVibes-Regular.woff') format('woff'), /* Modern Browsers */
+    url('../../frontend/font/GreatVibes-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+    url('../../frontend/font/GreatVibes-Regular.svg#45206ddb59cbd99a609ac10e32a55908') format('svg'); /* Legacy iOS */
+
+    font-style:   normal;
+    font-weight:  400;
+}
+
 /* -------------------------------------------------- */
 /* body */
 /* -------------------------------------------------- */
@@ -122,6 +134,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     letter-spacing: -1px;
+    font-family: 'Great Vibes', Georgia, serif;
+    color: #22225a;
 }
 
 h2 {
@@ -264,7 +278,7 @@ h5 {
 
     #mainmenu a {
         border-left: 1px solid #eee;
-        color: #951b81;
+        color: #22225a;
         display: block;
         font-family: "open sans",sans-serif;
         line-height: 35px;
@@ -1222,15 +1236,14 @@ header {
 }
 
 header .info {
-    border-bottom: none;
-    color: #555;
-    background: #fff;
-    border-bottom: solid 1px #eee;
+    background: #22225a none repeat scroll 0 0;
+    border-bottom: 1px solid #000;
+    color: #fff;
     font-size: 12px;
 }
 
     header .info a {
-        color: #646464;
+        color: #fff;
     }
 
     header .info .separator {
@@ -1412,6 +1425,7 @@ blockquote {
     padding: 0;
     margin: 0;
     margin-bottom: 20px;
+    margin-top: 40px;
 }
 
     #filters li {
@@ -1716,7 +1730,6 @@ i.black {
 #gallery .item {
     text-align: center;
     margin-bottom: 30px;
-    background: #f5f5f5;
     font-size: 12px;
 }
 
